feat: add customer retrieve
